Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextIntObj.quorum
class Main
    action Main
        text v = Test()
    end

    action Test() returns text
        Integer var
        var:SetValue(5)
        return var
    end
end